testdata/baselines/reference/submodule/compiler/requireOfJsonFileInJsFile.errors.txt
/user.js(1,15): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
/user.js(5,15): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
/user.js(8,13): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
/user.js(12,13): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== /user.js (4 errors) ====
    const json0 = require("./json.json");
                  ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    json0.b; // Error (good)
    
    /** @type {{ b: number }} */
    const json1 = require("./json.json"); // No error (bad)
                  ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    json1.b; // No error (OK since that's the type annotation)
    
    const js0 = require("./js.js");
                ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    json0.b; // Error (good)
    
    /** @type {{ b: number }} */
    const js1 = require("./js.js"); // Error (good)
                ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    js1.b;
==== /json.json (0 errors) ====
    { "a": 0 }
    
==== /js.js (0 errors) ====
    module.exports = { a: 0 };
    